alguns ajustes